[package]
name = "codechain-crypto"
version = "0.1.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ring = "0.14.6"
quick-error = "1.2"
rust-crypto = "0.2.36"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
sha-1 = "0.8.2"
sha2 = "0.8.1"
sha3 = "0.8.2"
ripemd160 = "0.8.0"
digest = "0.8"

[dev-dependencies]
rand = "0.6.1"
