[package]
name = "codechain-crypto"
version = "0.2.0"
authors = ["CodeChain Team <hi@codechain.io>"]
edition = "2018"

[dependencies]
ring = "0.14.6"
quick-error = "1.2"
primitives = { git = "https://github.com/CodeChain-io/rust-codechain-primitives.git", version = "0.4" }
sha-1 = "0.8.2"
sha2 = "0.8.1"
sha3 = "0.8.2"
ripemd160 = "0.8.0"
digest = "0.8"
blake2 = "0.8.1"
block-modes = "0.3.3"
aes = "0.3.2"
ctr = "0.3.2"
hex = "0.4.0"
scrypt = { version = "0.2", default-features = false }

[dev-dependencies]
rand = "0.6.1"
